--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="http://example.com/favicon.png"/>
     <link rel="stylesheet" href="https://unpkg.com/purecss/build/pure-min.css" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css' | relative_url }}">
   </head>
